--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(fastdl SHARED fastdl.c)
 target_link_libraries(fastdl dl)
 set_target_properties(fastdl PROPERTIES
+                      C_STANDARD 11
                       VERSION "0.1.0"
                       SOVERSION "0.1.0"
                       PUBLIC_HEADER "fastdl.h")
