--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(libfastdl)
+project(libfastdl C)
 enable_testing()
 add_subdirectory(src)
 add_subdirectory(test)
