--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: c
 compiler:
   - gcc
 install:
+  - sudo apt-get install libcmocka-dev
   - sudo apt-get install uthash-dev
 before_script:
   - cmake -version
