--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ compiler:
   - gcc
 install:
   - git clone git://git.cryptomilk.org/projects/cmocka.git 
+  - cd cmocka
   - mkdir build
   - cmake ..
   - make
