--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ compiler:
   - gcc
 before_install:
   - git clone git://git.cryptomilk.org/projects/cmocka.git 
+install:
   - sudo apt-get install -y uthash-dev
   - cd cmocka
   - mkdir build
