--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,14 @@ compiler:
   - gcc
 before_install:
   - git clone git://git.cryptomilk.org/projects/cmocka.git 
-install:
-  - sudo apt-get install -y uthash-dev
   - cd cmocka
   - mkdir build
-  - cmake .. && make && sudo make install
+  - cd build
+  - cmake ..
+install:
+  - cd cmocka/build
+  - make && sudo make install
+  - sudo apt-get install -y uthash-dev
 before_script:
   - cmake -version
   - make --version 
