--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,11 @@ before_install:
   - mkdir build
   - cd build
   - cmake ..
+  - cd ../../
 install:
+  - cd cmocka/build
   - make && sudo make install
+  - cd ../../
   - sudo apt-get install -y uthash-dev
 before_script:
   - cmake -version
