--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - cd cmocka
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr ..
   - cd ../../
 install:
   - cd cmocka/build
@@ -21,5 +21,5 @@ before_script:
   - gcc --version
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr ..
 script: make && ctest --verbose
