--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(fastdl SHARED fastdl.c)
 target_link_libraries(fastdl dl)
 set_target_properties(fastdl PROPERTIES
-                             VERSION "0.1.1"
-                             SOVERSION "0.1.0"
+                             VERSION ${fastdl_version} 
+                             SOVERSION ${fastdl_soversion}
                              PUBLIC_HEADER "fastdl.h")
 install(TARGETS fastdl
         LIBRARY DESTINATION lib
