--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ else()
   set(CMAKE_C_STANDARD 11)
 endif()
 
+execute_process(COMMAND git remote set-branches origin '*')
+execute_process(COMMAND git fetch)
 execute_process(COMMAND git shortlog --all -nse --no-merges HEAD OUTPUT_FILE "${CMAKE_SOURCE_DIR}/AUTHORS")
 add_custom_target(authors ALL git shortlog --all -nse --no-merges HEAD > "${CMAKE_SOURCE_DIR}/AUTHORS")
 
