--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,19 @@
-add_library(fastdl SHARED fastdl.c)
+add_library(fastdl SHARED)
+target_sources(fastdl PRIVATE fastdl.c)
+target_compile_options(fastdl PRIVATE -Wall)
+set_target_properties(
+    fastdl
+    PROPERTIES
+    C_STANDARD 11
+    VERSION ${version}
+    SOVERSION ${soversion}
+    PUBLIC_HEADER "fastdl.h"
+)
+
 target_link_libraries(fastdl dl)
-set_target_properties(fastdl PROPERTIES
-                             VERSION ${fastdl_version} 
-                             SOVERSION ${fastdl_soversion}
-                             PUBLIC_HEADER "fastdl.h")
-install(TARGETS fastdl
-        LIBRARY DESTINATION lib
-        PUBLIC_HEADER DESTINATION include)
+
+install(
+    TARGETS fastdl
+    LIBRARY DESTINATION lib
+    PUBLIC_HEADER DESTINATION include
+)
