--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,11 @@
-dist: trusty
+dist: xenial
 sudo: required
 language: c
 compiler:
   - gcc
 before_install:
-  - git clone git://git.cryptomilk.org/projects/cmocka.git 
-  - cd cmocka
-  - mkdir build
-  - cd build
-  - cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr ..
-  - cd ../../
 install:
-  - cd cmocka/build
-  - make && sudo make install
-  - cd ../../
-  - sudo apt-get install -y uthash-dev
+  - sudo apt-get install -y uthash-dev libcmocka-dev
 before_script:
   - cmake -version
   - make --version 
