--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,23 @@ target_link_libraries(fastdl dl)
 
 install(
     TARGETS fastdl
+    EXPORT fastdl-targets
     LIBRARY DESTINATION lib
     PUBLIC_HEADER DESTINATION include
 )
+
+install(
+    EXPORT fastdl-targets
+    NAMESPACE fastdl::
+    FILE fastdl-config.cmake
+    DESTINATION lib/cmake/fastdl
+)
+
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+    fastdl-config-version.cmake
+    VERSION ${version}
+    COMPATIBILITY SameMinorVersion
+)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/fastdl-config-version.cmake DESTINATION lib/cmake/fastdl)
