--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,22 @@ language: c
 compiler:
   - gcc
 before_install:
+  - pwd
+  - git clone -b $TRAVIS_BRANCH --recurse-submodules -j8 https://github.com/gonapps-org/libgenc
+  - cd libgenc
+  - mkdir build
+  - cd build
+  - cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr ..
+  - cd ../../
+
 install:
-  - sudo apt-get install -y uthash-dev libcmocka-dev
+  - sudo apt-get install -y libcmocka-dev
+  - pwd
+  - cd libgenc/build
+  - make
+  - sudo make install
+  - cd ../../
+
 before_script:
   - cmake -version
   - make --version 
